src/syntax/snapshots/dilaria__syntax__lex__test__braces_brackets_parens.snap
---
source: src/syntax/lex.rs
expression: tokens
---
[
    BraceO,
    ParenO,
    BracketO,
    BracketC,
    BracketC,
    BraceC,
]
