src/syntax/snapshots/dilaria__syntax__lex__test__fancy_stuff.snap
---
source: src/syntax/lex.rs
expression: tokens
---
[
    Dot,
    Comma,
    Minus,
    Asterisk,
    Minus,
    Comma,
    Dot,
]
