src/syntax/snapshots/dilaria__syntax__lex__test__greater_than_less_than_equal.snap
---
source: src/syntax/lex.rs
expression: tokens
---
[
    GreaterEqual,
    LessEqual,
    EqualEqual,
    Less,
    Less,
    GreaterEqual,
]
