src/syntax/snapshots/dilaria__syntax__lex__test__greeting.snap
---
source: src/syntax/lex.rs
expression: tokens
---
[
    Minus,
    Dot,
    Minus,
    Slash,
    Percent,
]
