src/syntax/snapshots/dilaria__syntax__lex__test__keyword_and_ident.snap
---
source: src/syntax/lex.rs
expression: tokens
---
[
    Let,
    Ident(
        "variable",
    ),
    Ident(
        "be",
    ),
    Ident(
        "a",
    ),
    Loop,
    If,
    False,
    Ident(
        "is",
    ),
    True,
]
