src/syntax/snapshots/dilaria__syntax__lex__test__keywords.snap
---
source: src/syntax/lex.rs
expression: tokens
---
[
    Let,
    Fn,
    If,
    Else,
    Loop,
    While,
    Break,
    For,
    True,
    False,
    Null,
    And,
    Not,
    Or,
    Print,
]
