src/syntax/snapshots/dilaria__syntax__lex__test__larger_numbers.snap
---
source: src/syntax/lex.rs
expression: tokens
---
[
    Number(
        123456789.0,
    ),
    Comma,
    Number(
        123456789.1234,
    ),
    Comma,
    Number(
        64785903.0,
    ),
]
