src/syntax/snapshots/dilaria__syntax__lex__test__no_no_no.snap
---
source: src/syntax/lex.rs
expression: tokens
---
[
    BangEqual,
    BangEqual,
    Equal,
    BangEqual,
]
