src/syntax/snapshots/dilaria__syntax__lex__test__smiley_face.snap
---
source: src/syntax/lex.rs
expression: tokens
---
[
    Greater,
    Greater,
    Dot,
    Less,
    Less,
]
